@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Add DESTDIR prefix hack. See issue <https://github.com/PerlAlien/Alien-Build/issues/407>
+    for more information.
 
 0.05      2023-10-29 15:08:30-04:00 America/New_York
   - Deprecate interpolation of `%{meson}`.
